gitops/mgmt/flask-datta-able/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-datta-able-service
spec:
  selector:
    app: flask-datta-able
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
