gitops/mgmt/flask-datta-able/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-datta-able-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: flask-datta-able.mgmt.cloud.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: flask-datta-able-service
            port:
              number: 8080
